appId: com.toughra.ustadmobile
tags:
  - checklist4
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/004_006_assignment_submission_after_graceperiod"
  TESTNAME: "004_006_assignment_submission_after_graceperiod"
---
- clearState: com.toughra.ustadmobile
- clearState: com.toughra.ustadmobile2
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
# admin able to add a course and edit that course
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
- runFlow:
    file: "../build/common-app2/create_course_with_1teacher_1student.yaml"
    env:
      TESTCOURSENAME: Test Course
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
#teacher login
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: t1
      PASSWORD: test
- tapOn: "TEST COURSE"
- tapOn: "Edit"
- repeat:
    while:
      notVisible: "Add block"
    commands:
      - scroll
- tapOn: "Add block"
- tapOn: "Assignments"
- tapOn: "Title"
- inputText: "Test Assignment"
- tapOn: "Description (Optional)"
- inputText: "Test "
- hideKeyboard
- tapOn: "Completion criteria"
- tapOn: "Submitted"
- tapOn: "Deadline (Optional)"
- tapOn: "OK"
- tapOn:
    id: "com.toughra.ustadmobile:id/ca_deadline_time"
- tapOn: "OK"
- repeat:
    while:
      notVisible:
        id: "com.toughra.ustadmobile:id/ca_edit_penalty"
    commands:
      - scroll
- tapOn: "End of grace period"
- tapOn: "OK"
- tapOn:
    id: "com.toughra.ustadmobile:id/ca_grace_time"
- tapOn: "OK"
- tapOn:
    id: "com.toughra.ustadmobile:id/ca_edit_penalty"
- eraseText
- inputText: "10"
- tapOn: "DONE"
- tapOn: "SAVE"
#-------------------------------------------------------------------------student submit assignment
- runFlow: "../build/common-app2/clear_state_and_get_started.yaml"
- runFlow: "../build/common-app2/select_site.yaml"
- runFlow:
    file: "../build/common-app2/user_login.yaml"
    env:
      USERNAME: s1
      PASSWORD: test
- tapOn: "Courses"
- tapOn: "Test Course"
- tapOn: "Test Assignment"
- assertNotVisible: "SUBMIT"
- takeScreenshot: "${TESTRESULTSDIR}/screenshots/submit_button_not_visible_after_deadline"
- clearState: com.toughra.ustadmobile
- clearState: com.toughra.ustadmobile2