appId: com.toughra.ustadmobile
tags:
  - discussionBoard
env:
  TESTRESULTSDIR: "build/reports/maestro/005_002_users_can_add_post_on_discussion_board/Screenshots"
onFlowStart:
  - startRecording: 005_002_users_can_add_post_on_discussion_board
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
- runScript:
    file: "common/import_users_via_http.js"
    env:
      TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
      IMPORT_FROM_CSV_FILE: "Ustad_Teacher_and_Students.csv"

- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: "Test Course Block"
# edit the course to add blocks
- tapOn:
    id: "floating_action_button"
# add assignment block ------ 1
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- runFlow:
    when:
      notVisible:
        text: "Discussion board"
    commands:
      - swipe:
          from:
            text: "Drag handle"
          direction: UP
- tapOn: "Discussion board"
- tapOn: "Title*"
- inputText: "Discussion 1"
- hideKeyboard
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- assertVisible:
    id: "app_title"
    text: "Add discussion"
- tapOn: "Done"
- tapOn: "Save"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- assertVisible:            #  +POST button
    id: "floating_action_button"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- tapOn:            #  +POST button
    id: "floating_action_button"
- tapOn: "Title*"
- inputText: "Post 1"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "This is post by teacher"
- tapOn: "Post"
- assertVisible:
    id: "app_title"
    text: "Post 1"
- assertVisible:
    text: "This is post by teacher"

- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "stud1"
      PASSWORD: "tests1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- tapOn:            #  +POST button
    id: "floating_action_button"
- tapOn: "Title*"
- inputText: "Post 2"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "This is post by student"
- tapOn: "Post"
- assertVisible:
    id: "app_title"
    text: "Post 2"
- assertVisible:
    text: "This is post by student"
- back
- assertVisible:
    id: "app_title"
    text: "Test Course Block"
- assertVisible:
    text: "Post 1"
- assertVisible:
    text: "Post 2"