appId: com.toughra.ustadmobile
env:
  TESTRESULTSDIR: "${TESTRESULTSDIR}/003_002_add_module_text_blocks_and_perform_indent_hide_delete_actions"
  TESTNAME:  "005_003_users_can_post_on_discussion_board"
---
# Admin login
- clearState: com.toughra.ustadmobile
- runFlow:
    file: "../common/startserver.yaml"
    env:
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
      TESTNAME: ${TESTNAME}
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
# add new course
- runFlow:
    file: "../common/add_course.yaml"
    env:
      TESTCOURSENAME: "Test Course Block"
# add new teacher using flow - add_new_teacher_inside_course ---------
- runFlow:
    file: "../common/add_new_teacher_inside_course.yaml"
    env:
      TESTCOURSENAME: ${TESTCOURSENAME}
      TEACHERFIRSTNAME: "Teacher"
      TEACHERLASTNAME: "1"
      USERNAME: "t1"
      GENDER: "Female"
      PASSWORD: "test"
# add 6 students to the course through bulk import using .csv file
- runFlow:
    file: "../common/add_6_students_by_bulk_import.yaml"
    env:
      TESTFILENAME: "Ustad_Students_List.csv"
      CONTROLSERVER: ${CONTROLSERVER}
      TESTSERIAL: ${TESTSERIAL}
# teacher add an discussion board block
- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: "t1"
      PASSWORD: "test"
- tapOn: "Courses"
- tapOn: "Test Course Block"
# edit the course to add blocks
- tapOn:
    id: "floating_action_button"
# add assignment block ------ 1
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- swipe:
    from:
      text: "Drag handle"
    direction: UP
- tapOn: "Discussion board"
- tapOn: "Title*"
- inputText: "Discussion 1"
- hideKeyboard
- tapOn:
    text: "dd/mm/yyyy"
    index: "0"
- runScript:
    file: "../common/setDate.js"
- inputText: ${output.yesterday_Date}
- tapOn: "hh:mm"
- runScript:
    file: "../common/setDate.js"
- inputText: ${output.delay_1hr}
- hideKeyboard
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- assertVisible:
    id: "app_title"
    text: "Add discussion"
- tapOn: "Done"
- tapOn: "Save"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- assertVisible:            #  +POST button
    id: "floating_action_button"
- back
- tapOn:            #  Edit button
    id: "floating_action_button"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- assertVisible:
    id: "app_title"
    text: "Edit discussion"
- tapOn: "Done"
- tapOn: "Save"
- assertVisible:
    id: "app_title"
    text: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- tapOn:            #  +POST button
    id: "floating_action_button"
- tapOn: "Title*"
- inputText: "Post 1"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "This is post by teacher"
- tapOn: "Post"
- assertVisible:
    id: "app_title"
    text: "Post 1"
- assertVisible:
    text: "This is post by teacher"

- runFlow: "../common/clear_state_and_get_started.yaml"
- runFlow: "../common/select_site.yaml"
- runFlow:
    file: "../common/user_login.yaml"
    env:
      USERNAME: "s1"
      PASSWORD: "tests1"
- tapOn: "Courses"
- tapOn: "Test Course Block"
- scrollUntilVisible:
    element:
      text: "Discussion 1"
    direction: DOWN
- tapOn: "Discussion 1"
- tapOn:            #  +POST button
    id: "floating_action_button"
- tapOn: "Title*"
- inputText: "Post 2"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "This is post by student"
- tapOn: "Post"
- assertVisible:
    id: "app_title"
    text: "Post 2"
- assertVisible:
    text: "This is post by student"
- back
- assertVisible:
    id: "app_title"
    text: "Test Course Block"
- assertVisible:
    text: "Post 1"
- assertVisible:
    text: "Post 2"

    # Add reply text field not accessible by maestro
- tapOn: "Post 1"
- extendedWaitUntil:
    visible: "add_a_reply"
    timeout: 10000
- tapOn:
    id: "add_a_reply"
- inputText: "Comment from student"
- tapOn: "Post"